// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Popover ui default 1`] = `
<div>
  <span
    aria-expanded="false"
    role="button"
    tabindex="0"
  >
    <div>
      The popover should be wrapped around this div, in a span
    </div>
  </span>
</div>
`;

exports[`Component: Popover ui open 1`] = `
<div>
  <span
    aria-expanded="false"
    role="button"
    tabindex="0"
  >
    <div>
      The popover should be wrapped around this div, in a span
    </div>
  </span>
</div>
`;

exports[`Component: Popover ui with optional properties 1`] = `
<div>
  <span
    aria-expanded="false"
    role="button"
    style="margin-top: 5px; padding: 10px;"
    tabindex="0"
  >
    <div>
      The popover should be wrapped around this div, in a div
    </div>
  </span>
</div>
`;
